Code refactoring, replaced manual DTO mapping with ModelMapper library

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.datasource.url= jdbc:postgresql://localhost:5432/filmsearch
 spring.datasource.username=postgres
-spring.datasource.password=pass1234
+spring.datasource.password=qwer1234
 
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
+
+server.allowed.origins=localhost:3000
