--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,4 @@ server.allowed.origins=localhost:3000
 themoviedb.api.key=024d7c40fc321f3728de8a1fde1a6317
 themoviedb.search.film.endpoint=https://api.themoviedb.org/3/search/movie?api_key=024d7c40fc321f3728de8a1fde1a6317&language=en-US&query=
 themoviedb.search.tvShow.endpoint=https://api.themoviedb.org/3/search/tv?api_key=024d7c40fc321f3728de8a1fde1a6317&language=en-US&query=
+themoviedb.get.genres.endpoint=https://api.themoviedb.org/3/genre/movie/list?api_key=024d7c40fc321f3728de8a1fde1a6317&language=en-US
