--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.datasource.url= jdbc:postgresql://localhost:5432/filmsearch
 spring.datasource.username=postgres
 spring.datasource.password=qwer1234
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 
 server.allowed.origins=localhost:3000
 
