--- a/webapp/package.json
+++ b/webapp/package.json
@@ -1,7 +1,9 @@
 {
   "name": "webapp",
   "version": "0.0.0",
-  "dependencies": {},
+  "dependencies": {
+    "normalize.css": "^7.0.0"
+  },
   "scripts": {
     "test": "gulp test"
   },
