--- a/webapp/package.json
+++ b/webapp/package.json
@@ -2,7 +2,8 @@
   "name": "webapp",
   "version": "0.0.0",
   "dependencies": {
-    "normalize.css": "^7.0.0"
+    "normalize.css": "^7.0.0",
+    "swiper": "^3.4.2"
   },
   "scripts": {
     "test": "gulp test"
