--- a/webapp/bower.json
+++ b/webapp/bower.json
@@ -13,7 +13,7 @@
     "animate.css": "~3.3.0",
     "angular": "~1.4.0",
     "angular-bootstrap-switch": "~0.4.1",
-    "angular-chart.js": "~0.8.8"
+    "angular-chart.js": "^0.8.8"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.0"
